<resources>
    <string name="app_name">Restaurant Dine-in</string>
    <string name="table1">Table 1</string>
    <string name="table2">Table 2</string>
    <string name="table3">Table 3</string>
    <string name="table4">Table 4</string>
    <string name="table5">Table 5</string>
    <string name="table6">Table 6</string>
    <string name="table7">Table 7</string>
    <string name="table8">Table 8</string>
    <string name="table9">Table 9</string>
    <string name="table10">Table 10</string>
    <string name="reception">Reception</string>
    <string name="kitchen">Kitchen</string>
    <string name="appetizers">APPETIZERS</string>
    <string name="vegetarian">VEGETARIAN</string>
    <string name="chicken">CHICKEN</string>
    <string name="lamb">LAMB</string>
    <string name="seafood">SEA FOOD</string>
    <string name="breads">BREADS</string>
    <string name="drinks">DRINKS</string>

    <string name="cancel_caps">CANCEL</string>
    <string name="add_caps">ADD</string>
    <string name="done_caps">DONE</string>
    <string name="enter_quantity">Enter Quantity</string>\
    <string name="enter_comment">Enter Comment</string>
    <string name="reset_all_caps">RESET</string>
    <string name="place_order_all_caps">PLACE ORDER</string>
    <string name="delete_caps">DELETE</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="msg_do_you_want_to_delete">Do you want to delete this item?</string>
    <string name="msg_discard_changes_go_back">Do you want to discard changes and go back?</string>
    <string name="msg_clear_order">Do you want to clear whole order?</string>
    <string name="ok_caps">OK</string>
    <string name="no_printer_configuration">No printer configuration found!</string>
    <string name="confirm_test_printing">Do you want to PRINT test page?</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
</resources>
