<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/all_border_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/all_border_background">

            <TextView
                android:id="@+id/selectedCategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appetizers"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_25sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">

        <ListView
            android:id="@+id/foodItemsListView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_5dp"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            android:dividerHeight="@dimen/margin_1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/all_border_background"
            android:weightSum="1">

            <Button
                android:id="@+id/cancelBtn"
                style="@style/DIALOG_BUTTON_STYLE"
                android:textSize="@dimen/text_size_20sp"
                android:layout_weight="0.5"
                android:text="@string/cancel_caps"/>

            <Button
                android:id="@+id/addBtn"
                style="@style/DIALOG_BUTTON_STYLE"
                android:textSize="@dimen/text_size_20sp"
                android:layout_weight="0.5"
                android:text="@string/add_caps"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>